<resources>
    <string name="app_name">HR</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="human_resource">Human Resource</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="todo">TODO</string>
    <string name="Work_experience">ประสบการณ์การทำงาน</string>
    <string name="Expertise">ความชำนาญ</string>
    <string name="membership_card">บัตรสมาชิกสภาการพยาบาล</string>
    <string name="Professional_license">ใบประกอบวิชาชีพ</string>
    <string name="Educational_background">ประวัติการศึกษา</string>
    <string name="address">ที่อยู่</string>
    <string name="information">ข้อมูลส่วนตัว</string>
    <string name="name">ชื่อ</string>
    <string name="mainmenu">เมนูหลัก</string>
    <string name="personal_info">ข้อมูลส่วนตัว</string>
    <string name="prefix">คำนำหน้า</string>
    <string name="work_in">วันที่เข้าทำงาน</string>
    <string name="lastname">นามสกุล</string>
    <string name="prefix_eng">Prefix</string>
    <string name="first_name_eng">First name</string>
    <string name="last_name_eng">Last name</string>
    <string name="nickname">ชื่อเล่น</string>
    <string name="nickname_eng">Nickname</string>
    <string name="next">ถัดไป</string>
    <string name="gender">เพศ</string>
    <string name="province">จังหวัดที่เกิด</string>
    <string name="dob">วัน/เดือน/ปี เกิด</string>
    <string name="blood_type">หมู่เลือด</string>
    <string name="religion">ศาสนา</string>
    <string name="nationality">เชื้อชาติ</string>
    <string name="race">สัญชาติ</string>
    <string name="maritual_status">สถานภาพ</string>
    <string name="back">ย้อนกลับ</string>
    <string name="citizen_id">เลขที่บัตรประชาชน</string>
    <string name="passport_id">เลขที่หนังสือเดินทาง</string>
    <string name="tax_id">เลขทีผู้เสียภาษี</string>
    <string name="bank_id">เลขที่บัญชี</string>
    <string name="bank_name">ธนาคาร</string>
    <string name="email">อีเมล</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="website">เว็บไซต์</string>
    <string name="motto">คติประจำใจ</string>
    <string name="interest_in">ความสนใจ</string>
    <string name="save">บันทึก</string>
</resources>
