<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <Button
        android:id="@+id/view_btn_license"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_rounded_main_menu"
        android:foregroundGravity="center_horizontal"
        android:gravity="center"
        android:text="@string/Professional_license"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.597" />

    <Button
        android:id="@+id/view_btn_address"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_rounded_main_menu"
        android:foregroundGravity="center_horizontal"
        android:gravity="center"
        android:text="@string/address"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.407" />

    <Button
        android:id="@+id/view_btn_work"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_rounded_main_menu"
        android:foregroundGravity="center_horizontal"
        android:gravity="center"
        android:text="@string/Work_experience"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.89" />

    <Button
        android:id="@+id/view_btn_personal"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_rounded_main_menu"
        android:foregroundGravity="center_horizontal"
        android:gravity="center"
        android:text="@string/information"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.314" />

    <Button
        android:id="@+id/view_btn_education"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_rounded_main_menu"
        android:foregroundGravity="center_horizontal"
        android:gravity="center"
        android:text="@string/Educational_background"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.499" />

    <Button
        android:id="@+id/view_btn_expertise"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_rounded_main_menu"
        android:foregroundGravity="center_horizontal"
        android:gravity="center"
        android:text="@string/Expertise"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.792" />

    <Button
        android:id="@+id/view_btn_membership"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_rounded_main_menu"
        android:foregroundGravity="center_horizontal"
        android:gravity="center"
        android:text="@string/membership_card"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.692" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="125dp"
        android:layout_height="104dp"
        android:contentDescription="@string/todo"
        android:src="@mipmap/ic_launcher"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.046" />

    <TextView
        android:id="@+id/view_name_user"
        android:layout_width="236dp"
        android:layout_height="43dp"
        android:text="@string/name"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.571"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.229" />

</androidx.constraintlayout.widget.ConstraintLayout>
