<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Authen.LoginFragment"
    android:background="@color/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/img_logo"
            android:layout_width="299dp"
            android:layout_height="154dp"
            android:layout_gravity="center"
            android:layout_marginTop="130dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/googleg_standard_color_18" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/kanit"
            android:gravity="center"
            android:text="@string/human_resource"
            android:textColor="#FFFDFD"
            android:textSize="40sp" />

        <EditText
            android:id="@+id/input_username"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/input"
            android:drawablePadding="16dp"
            android:hint="@string/username"
            android:importantForAutofill="no"
            android:inputType="text"
            android:padding="12dp"
            android:textColor="#fff"
            android:textColorHint="#fff" />

        <EditText
            android:id="@+id/input_password"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/input"
            android:drawablePadding="16dp"
            android:hint="@string/password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:padding="12dp"
            android:textColor="#fff"
            android:textColorHint="#fff" />

        <Button
            android:id="@+id/view_btn_signin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="70dp"
            android:layout_marginRight="70dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/btn_rounded"
            android:gravity="center"
            android:padding="14dp"
            android:text="@string/sign_in"
            android:textAlignment="center"
            android:textSize="16sp" />

        <!--        <com.facebook.login.widget.LoginButton-->
        <!--            android:id="@+id/login_button"-->
        <!--            android:layout_width="wrap_content"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_gravity="center_horizontal"-->
        <!--            android:layout_marginTop="30dp"-->
        <!--            android:layout_marginBottom="30dp" />-->
    </LinearLayout>

</FrameLayout>